--- a/main.html
+++ b/main.html
@@ -10,13 +10,14 @@
 		<div class="row">
 	    	<div class="col-xs-6">
 	    		<h2>Open the box</h2>
-			    <img id="box1" src="box.jpg" height="80px" width="80px">
-			    <img id="box2" src="box.jpg" height="80px" width="80px">
-			    <img id="box3" src="box.jpg" height="80px" width="80px">
-			    <img id="box4" src="box.jpg" height="80px" width="80px">
-			    <img id="box5" src="box.jpg" height="80px" width="80px">
+			    <img id="box1" src="img/box.jpg" height="80px" width="80px">
+			    <img id="box2" src="img/box.jpg" height="80px" width="80px">
+			    <img id="box3" src="img/box.jpg" height="80px" width="80px">
+			    <img id="box4" src="img/box.jpg" height="80px" width="80px">
+			    <img id="box5" src="img/box.jpg" height="80px" width="80px">
 			</div>
 		</div>	    
-	   <script src="motionCircle.js"></script>
+		<script src="js/modules/const.js"></script>
+	   <script src="js/classes/random.js"></script>
 	</body>
 </html>
